kubernetes/assignment10/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dataapp
  namespace: team-payments
spec:
  selector:
    app: dataapp
  ports:
    - port: 80
      targetPort: 8080
