kubernetes/assignment10/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devopsapp
  namespace: team-payments
spec:
  ingressClassName: nginx
  rules:
    - host: devopsapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devopsapp
                port:
                  number: 80
          - path: /data
            pathType: Prefix
            backend:
              service:
                name: dataapp
                port:
                  number: 80
